@@ -1,9 +1,9 @@
 // index.js
-import "./styles.css";
-import { greeting } from "./api-search.js";
-import { getWeather } from "./api-search.js";
 
-console.log(greeting);
+// imports
+import "./styles.css";
+
+import { getWeather } from "./get-weather.js";
 
 import watermelonGif from "../watermelon.gif";
 
